<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/stringemail" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/greyframe"
        android:ems="10"
        android:layout_marginRight="10dp"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/texthaslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringhaslo" />

    <EditText
        android:id="@+id/edithaslo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/greyframe"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonzaloguj"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/stringzaloguj" />

</LinearLayout>
